# yaboiiiii-404-gen-r0-

./: README.md  pyproject.toml  requirements.txt  run_round.py
chutes_ai/: chute_app.py  chute_docker.py  chute_io_data_structures.py
docker/: Dockerfile  start.sh
outputs/: 065aec52-9c73-476c-afc5-50a0fbf16c62.js  1c939743-4447-404a-9814-835b4e286000.js  5bd1da3c-ae79-4995-84c1-cde98abe0c48.js  7ffea734-de86-4db6-aa62-53bd94f30ff2.js
pipeline/: generate_scene.py  validate.py
