[project]
name = "sn17-chute"
version = "0.1.0"
description = "SN17 image-to-Three.js Chute miner"
requires-python = ">=3.11"
dependencies = [
    "chutes",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2",
    "loguru>=0.7",
    "python-multipart>=0.0.9",
]

[tool.setuptools.packages.find]
include = ["chutes_ai*", "pipeline*"]
